Fix spacing

--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,6 @@ body{
     max-height: 500px; */
     width: 400px;
     height: 650px;
-    margin-left: 2.5rem;
     overflow: hidden;
 
     aspect-ratio: 2.5/3.5;
